fixed bug where main page content doesn't hide behind navbar dropdown on phone

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,11 @@
 /*Navbar styles*/
 .navbar {
     background-color: #302c34 ;
+    z-index: 2; /*Navbar on top of everything*/
+}
+
+.navbar-collapse {
+    background-color: #302c34 ;
 }
 
 .navbar-toggler-icon { /*Hamburger icon color to white*/
@@ -64,7 +69,7 @@
 }
 
 /*Main styles*/
-.construction {
+.construction { /*REMOVE LATER*/
     position: absolute;
     top: 50%;
     left: 50%;
@@ -72,6 +77,10 @@
     font-size: 1.25em; 
     text-align: center;
     color: #ffffff;
+    z-index: 1; /*Construction message hidden behind nav bar when it opens*/
+}
+.hidden {
+    display: none;
 }
 
 /*Footer styles*/
